--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -3,25 +3,43 @@
   <head>
     <title>Shipment</title>
     <%= csrf_meta_tags %>
-
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
   <body>
+
+
+
     <nav>
+      <ul>
    <p class="navbar-text pull-right">
    <% if user_signed_in? %>
      Logged in as <strong><%= current_user.email %></strong>.
-     <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %> |
+     <%= link_to 'Edit profile', edit_user_registration_path, :class => 'navbar-link' %>
      <%= link_to 'Sign out', destroy_user_session_path, :method => :delete, :class => 'navbar-link'  %>
+     <%= link_to"Boats" , boats_path, :class => 'navbar-link'%>
+     <%= link_to"Jobs", jobs_path, :class => 'navbar-link'%>
+     <%= link_to"Create boat", new_boat_path, :class => 'navbar-link'%>
+     <%= link_to"Create jobs", new_job_path, :class => 'navbar-link'%>
+
+     
    <% else %>
      <%= link_to "Sign up", new_user_registration_path, :class => 'navbar-link'  %> |
      <%= link_to "Login", new_user_session_path, :class => 'navbar-link'  %>
    <% end %>
    </p>
  </nav>
- 
+
+
+ </div>
+
+  </head>
+  <body>
+
+
+
+
     <p class="notice"><%= notice %></p>
        <p class="alert"><%= alert %></p>
     <%= yield %>
